# Bototo

./: .env.template  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .sops.yaml  CHANGELOG_V2.md  FILES_OVERVIEW.md  Makefile  PRODUCTION_READY_TASKLIST.md.backup  PRODUCTION_READY_TASKLIST_V2.md  QUICK_START.md  QUICK_START_VPS.md  README.md  UPDATES_SUMMARY.md  VPS_DEPLOY_INSTRUCTIONS.md  VPS_IBKR_SETUP.md  pyproject.toml
.github/workflows/: ci.yml  e2e-paper.yml  security.yml
apps/backtest_engine/src/: cli.py
apps/data_ingestor/src/: __init__.py  config.py  feature_cache.py  feature_calculator.py  feature_pipeline.py  main.py  market_calendar.py  service.py  sources.py
apps/execution_crypto/src/: exchange_manager.py  freqtrade_bridge.py  main.py  service.py
apps/execution_ib/src/: main.py  service.py
apps/feature_pipeline/src/: main.py  processor.py
apps/gateway_api/src/: auth.py  dependencies.py  main.py  models.py  observability.py  rate_limit.py
apps/gateway_api/src/middleware/: __init__.py  audit_log.py
apps/gateway_api/ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/gateway_api/ui/src/: App.tsx  main.tsx
apps/llm_agents/src/: __init__.py  embedding_service.py  graph.py  llm_client.py  main.py  memory.py  sentiment.py  service.py  vector_store.py
apps/news_ingestor/src/: analyzer.py  main.py  models.py
apps/portfolio_ledger/src/: main.py  service.py
apps/reporter/src/: main.py  service.py
apps/risk_manager/src/: config.py  main.py  rules.py  service.py  state.py
autollm_trader/: config.py  logger.py
autollm_trader/messaging/: nats_client.py
autollm_trader/metrics/: instrumentation.py  prom.py
autollm_trader/models/: __init__.py  events.py
autollm_trader/risk/: __init__.py  market_calendar.py
autollm_trader/security/: signature.py
autollm_trader/storage/: audit.py  duckdb.py  postgres.py
autollm_trader/utils/: time.py
configs/: feeds.yaml  miniflux.json  risk.yaml  symbols.yaml
docs/: SECRETS_ROTATION.md
infra/: bootstrap-vps-ip.sh  bootstrap.sh  deploy-and-verify.sh  deploy-vps.sh  docker-compose.dev.yml  docker-compose.yml  verify-stack.sh
infra/caddy/: Caddyfile
infra/dockerfiles/: base.Dockerfile  gateway.Dockerfile  llm_agents.Dockerfile
infra/grafana/dashboards/: autollm.json
infra/loki/: config.yml
infra/prometheus/: alertmanager.yml  prometheus.yml
scripts/: docker-compose-sops.sh  flatten_all.py  healthcheck.sh  migrate_duckdb.py  seed_miniflux.py  setup_ibkr_paper.sh  watchdog.py
tests/e2e/: test_end_to_end.py
tests/integration/: test_backtest.py  test_gateway_security.py
tests/unit/: test_crypto_executor_service.py  test_embedding_service.py  test_exchange_manager.py  test_execution_ib_service.py  test_feature_pipeline.py  test_llm_agents.py  test_memory.py  test_risk_evaluator.py  test_sentiment_analyzer.py  test_signature.py
